# lib/routes/jobAnalytics.js
@@ -1,13 +1,15 @@
 const boom = require('boom');
 const async = require('async');
 
+const {getFixedId}=require('../../lib/utils');
+
 /**
  * Handler for perfoming platfrom specific fiter
  * @param  {} req express request params
  * @param  {} res
  * @param  {} next
  */
-const filterPlatform = (req, res, next) => {
+const jobAnalytics = (req, res, next) => {
 
 	// validate request
 	const query = req.query;
@@ -17,12 +19,29 @@ const filterPlatform = (req, res, next) => {
 	
 	const db=res.locals.db;
 	const {platform}=query;
+	let jobId;
+	try{
+		jobId=getFixedId(req.params.jobId);
+	}catch(error){
+		return next(boom.badRequest(error.message));
+	}
 
 	// perform db queries
 	async.series({
-		totalUids:	cb=> db.totalUids({platform},cb),
-		totalUniqueUids:	cb=> db.totalUniqueUids({platform},cb),
-		totalCount    :cb=>db.totalCount(null,cb) 
+		jobStatus:cb=>{
+			db.jobStatus(jobId,(error,status)=>{
+				if(error){
+					return cb(error);
+				}
+				if(status!=='COMPLETED'){
+					return cb(boom.notFound(`JOB STATUS IS: ${status}`));
+				}
+				return cb();
+			});
+		},
+		totalUids:	cb=> db.totalUids({platform,jobId},cb),
+		totalUniqueUids:	cb=> db.totalUniqueUids({platform,jobId},cb),
+		totalCount    :cb=>db.totalCount(jobId,cb)    
 	},(err,result)=>{
 		if(err){
 			return next(err);
@@ -39,8 +58,6 @@ const filterPlatform = (req, res, next) => {
 			platformShare:platformShare.toFixed(2)
 		});
 	});
-
-
 };
 
-module.exports = filterPlatform;
+module.exports = jobAnalytics;
